# inteligenceapi

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  implementation_plan.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 74f3b7c409cc_initial_migration.py
app/: __init__.py  main.py
app/api/: auth.py  documents.py  health.py
app/core/: __init__.py  config.py  database.py  exceptions.py  limiter.py  logging.py  middleware.py
app/models/: document.py  user.py
app/schemas/: __init__.py  document.py  user.py
app/services/: ai_service.py
app/worker/: __init__.py  celery_app.py  tasks.py
tests/: conftest.py  test_auth.py  test_documents.py  test_health.py
uploads/: .gitkeep
